# rust-gameboy

./: .gitignore  Cargo.toml  README.md
examples/: emulator.rs
examples/emulator/: Cargo.toml
examples/emulator/src/: main.rs
src/: bus.rs  cartridge.rs  config.rs  cpu.rs  emulator.rs  lib.rs  state.rs
src/bus/: cartridge.rs  io.rs  joypad.rs  memory_range.rs  mod.rs  ppu.rs  ram.rs  rtc.rs  timer.rs
src/cpu/: alu.rs  decode.rs  disassemble.rs  instructions.rs  interrupts.rs  mod.rs  state.rs
