[package]
name = "gameboy-core"
description = "No-std GameBoy and GameBoy Color emulation library"
version = "0.1.0"
authors = ["Nir H."]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["alloc"]
std = []
alloc = []
debug = []
display = ["minifb"]

[dependencies]
num = "0.4"
minifb = { version = "0.19.3", optional = true }

[[example]]
name = "emulator"
required-features = ["display"]
